--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "first",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -15,5 +15,18 @@
   "bugs": {
     "url": "https://github.com/buhtla85/first/issues"
   },
-  "homepage": "https://github.com/buhtla85/first#readme"
+  "homepage": "https://github.com/buhtla85/first#readme",
+  "devDependencies": {
+    "@types/react": "^16.8.24",
+    "@types/react-dom": "^16.8.5",
+    "source-map-loader": "^0.2.4",
+    "ts-loader": "^6.0.4",
+    "typescript": "^3.5.3",
+    "webpack": "^4.39.0",
+    "webpack-cli": "^3.3.6"
+  },
+  "dependencies": {
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
+  }
 }
