--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "serve ./"
   },
   "repository": {
     "type": "git",
@@ -23,10 +24,17 @@
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.3",
     "webpack": "^4.39.0",
-    "webpack-cli": "^3.3.6"
+    "webpack-cli": "^3.3.6",
+    "style-loader": "^1.0.0",
+    "css-loader": "3.2.0",
+    "serve": "^11.2.0"
   },
   "dependencies": {
+    "@types/googlemaps": "^3.37.7",
+    "bootstrap": "4.3.1",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-icons": "3.7.0",
+    "react-router-dom": "^5.1.0"
   }
 }
