--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-icons": "3.7.0",
-    "react-router-dom": "^5.1.0"
+    "react-router-dom": "^5.1.0",
+    "date-fns": "2.6.0"
   }
 }
